fixes and future work

--- a/topo-logic-draft.bib
+++ b/topo-logic-draft.bib
@@ -169,3 +169,64 @@ archivePrefix = {arXiv},
   publisher={Elsevier}
 }
 
+@article{DBLP:journals/corr/abs-1802-03726,
+  author    = {Paolo Baldan and
+               Roberto Bruni and
+               Andrea Corradini and
+               Fabio Gadducci and
+               Hern{\'{a}}n C. Melgratti and
+               Ugo Montanari},
+  title     = {Event Structures for Petri nets with Persistence},
+  journal   = {CoRR},
+  volume    = {abs/1802.03726},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.03726},
+  archivePrefix = {arXiv},
+  eprint    = {1802.03726},
+  timestamp = {Mon, 13 Aug 2018 16:47:13 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1802-03726},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@incollection{francisco2014survey,
+  title={A survey of Stanley--Reisner theory},
+  author={Francisco, Christopher A and Mermin, Jeffrey and Schweig, Jay},
+  booktitle={Connections between algebra, combinatorics, and geometry},
+  pages={209--234},
+  year={2014},
+  publisher={Springer}
+}
+
+@inproceedings{sorkin1983posets,
+  title={Posets as lattice topologies},
+  author={Sorkin, Rafael D},
+  booktitle={General Relativity and Gravitation, Volume 1},
+  volume={1},
+  pages={635},
+  year={1983}
+}
+
+@article{di2006edos,
+  title={EDOS deliverable WP2-D2. 2: Report on Formal Management of Software Dependencies},
+  author={Di Cosmo, Roberto},
+  year={2006}
+}
+
+@book{stern1999semimodular,
+  title={Semimodular lattices: theory and applications},
+  author={Stern, Manfred},
+  volume={73},
+  year={1999},
+  publisher={Cambridge University Press}
+}
+
+@article{abate2012dependency,
+  title={Dependency solving: a separate concern in component evolution management},
+  author={Abate, Pietro and Di Cosmo, Roberto and Treinen, Ralf and Zacchiroli, Stefano},
+  journal={Journal of Systems and Software},
+  volume={85},
+  number={10},
+  pages={2228--2240},
+  year={2012},
+  publisher={Elsevier}
+}
